# stock_predicction

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py
app/: __init__.py  main.py
app/api/: __init__.py  dependencies.py
app/api/v1/: __init__.py  health.py  predict.py  tickers.py
app/middleware/: __init__.py  rate_limit.py
app/schemas/: __init__.py  common.py  health.py  prediction.py  ticker.py
app/services/: __init__.py  prediction_service.py  ticker_service.py
docker/mlflow/: Dockerfile
docker/postgres/init/: 01-extensions.sql
src/: __init__.py
src/config/: __init__.py  logging_config.py  model_config.py  model_config.yaml  settings.py
src/db/: __init__.py  base.py  ohlcv.py  prediction.py  ticker.py
src/etl/: __init__.py
src/etl/extract/: __init__.py  from_stooq.py
src/etl/load/: __init__.py  to_postgres.py
src/etl/transform/: __init__.py  clean.py  to_parquet.py
src/evaluation/: __init__.py  backtest.py  metrics.py  walk_forward.py
src/features/: __init__.py  build_features.py  calendar.py  cross_sectional.py  labels.py  lag.py  technical.py
src/models/: __init__.py  baseline.py  dataset.py  predict.py  registry.py  train.py  xgboost_model.py
src/orchestration/: flows.py
src/tracking/: __init__.py  mlflow_utils.py
src/utils/: __init__.py  db.py  redis_client.py
tests/: conftest.py
tests/integration/: test_api.py  test_db_connection.py  test_redis_connection.py
tests/unit/: test_backtest.py  test_extract_stooq.py  test_features.py  test_metrics.py  test_transform_clean.py  test_walk_forward.py
