[project]
name = "stock-prediction"
version = "0.1.0"
description = "Production-grade ML pipeline for TSE (Tokyo Stock Exchange) price prediction with FastAPI inference layer"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = { text = "MIT" }
authors = [
    { name = "guzqu" },
]
keywords = ["machine-learning", "finance", "time-series", "fastapi", "stock-prediction"]

dependencies = [
    # ── Configuration & validation ────────────────────────────────────────────
    "pydantic>=2.10,<3", # 2.10 made PostgresDsn/RedisDsn real classes
    "pydantic-settings>=2.7,<3",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    # ── Logging ───────────────────────────────────────────────────────────────
    "loguru>=0.7.3",
    # ── Database (async + sync hybrid) ────────────────────────────────────────
    "sqlalchemy[asyncio]>=2.0.36,<2.1",
    "asyncpg>=0.30",
    "psycopg2-binary>=2.9",
    "alembic>=1.14",
    # ── Cache / message broker ────────────────────────────────────────────────
    "redis[hiredis]>=5.2,<6", # 5.x stable; 6+/7 have breaking changes
    # ── Data processing ───────────────────────────────────────────────────────
    "polars>=1.18",
    "pandas>=2.2",
    "numpy>=1.26,<3",
    "pyarrow>=18.0",
    # ── Machine learning ──────────────────────────────────────────────────────
    "scikit-learn>=1.5,<2",
    "xgboost>=2.1,<3", # 3.x removed gpu_id / 'gpu_hist' tree_method
    "lightgbm>=4.5,<5",
    "joblib>=1.4",
    # ── Financial / time-series utilities ─────────────────────────────────────
    "ta>=0.11", # technical indicators (RSI, MACD, …)
    "statsmodels>=0.14",
    # ── ML experiment tracking ────────────────────────────────────────────────
    "mlflow>=2.18,<3", # 3.x has breaking changes in tracing/registry
    # ── Orchestration ─────────────────────────────────────────────────────────
    "prefect>=3.1,<4", # Prefect 3 is the modern path
    # ── API layer ─────────────────────────────────────────────────────────────
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.32",
    "httpx>=0.27", # also used by tests
    "python-multipart>=0.0.9",
    "slowapi>=0.1.9", # rate limiting
    "pytest>=8.4.2",
]

[project.optional-dependencies]
dev = [
    # ── Testing ───────────────────────────────────────────────────────────────
    "pytest>=8.3,<9",                    # 9.x removed deprecated APIs (audit before)
    "pytest-asyncio>=0.24,<1",           # 1.x changed default asyncio_mode handling
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "factory-boy>=3.3",

    # ── Linting / formatting / typing (Ruff replaces Black) ──────────────────
    "ruff>=0.8,<0.16",
    "mypy>=1.13,<2",                     # mypy 2.x stricter — audit before bumping
    "types-pyyaml",
    "types-redis",
    "pre-commit>=4.0",

    # ── Notebooks ─────────────────────────────────────────────────────────────
    "jupyter>=1.0",
    "ipykernel>=6.29",
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "plotly>=5.22",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "app"]

# ── Ruff (lint + format — single tool, no Black) ──────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py313"
extend-exclude = ["data", "mlruns", "notebooks", "alembic/versions"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "N",      # pep8-naming
    "SIM",    # flake8-simplify
    "TCH",    # type-checking imports
    "RUF",    # ruff-specific
]
ignore = [
    "E501",   # line length — formatter handles it
    "B008",   # FastAPI Depends() in defaults is idiomatic
    "TC001",  # `from __future__ import annotations` makes TYPE_CHECKING blocks moot
    "TC002",  # idem
    "TC003",  # idem
    "RUF002", # we deliberately use → and other unicode characters in docstrings
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011", "S101"]
"alembic/versions/*" = ["E402", "F401"]
# ML code uses X_train / X_val / y_train naming by convention.
"src/models/*" = ["N803", "N806"]
"src/evaluation/*" = ["N803", "N806"]
"src/features/*" = ["N803", "N806"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

# ── Mypy ──────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_decorators = false
exclude = ["alembic/versions", "data", "mlruns", "notebooks"]

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

# ── Pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
minversion = "8.3"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--strict-markers",
    "--strict-config",
    "--tb=short",
    "--cov=src",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
]
markers = [
    "unit: fast isolated tests with no I/O",
    "integration: tests that hit the DB, Redis, or the filesystem",
    "slow: tests longer than ~1s",
]

[tool.coverage.run]
branch = true
source = ["src", "app"]
omit = [
    "*/tests/*",
    "*/alembic/versions/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
